--- a/.github/workflows/Windows - RustDesk.yml
+++ b/.github/workflows/Windows - RustDesk.yml
@@ -18,4 +18,9 @@ jobs:
         run: cmd /c show.bat
 
       - name: Time Counter
-        run: python time.py
+        run: |
+          while true
+          do
+            python time.py
+            sleep 1
+          done
